// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardList CardListの初期値(linkあり): dummyCardsLink 1`] = `
"<div>
  <div class=\\"card-list\\">
    <div class=\\"card-list__card\\">
      <article class=\\"card__item\\">
        <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card__img\\">
          <figcaption class=\\"card__explain\\">
            <h2 class=\\"card__title\\">ダミータイトル</h2>
            <p class=\\"card__text\\">詳細</p>
          </figcaption>
        </figure> <button class=\\"btn\\">
          WebSite
        </button>
      </article>
    </div>
    <div class=\\"card-list__card\\">
      <article class=\\"card__item\\">
        <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card__img\\">
          <figcaption class=\\"card__explain\\">
            <h2 class=\\"card__title\\">ダミータイトル</h2>
            <p class=\\"card__text\\">詳細</p>
          </figcaption>
        </figure> <button class=\\"btn\\">
          GitHub
        </button>
      </article>
    </div>
  </div>
</div>"
`;

exports[`CardList CardListの初期値(linkなし): dummyCards 1`] = `
"<div>
  <div class=\\"card-list\\">
    <div class=\\"card-list__card\\">
      <article class=\\"card__item\\">
        <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card__img\\">
          <figcaption class=\\"card__explain\\">
            <h2 class=\\"card__title\\">ダミータイトル</h2>
            <p class=\\"card__text\\">詳細</p>
          </figcaption>
        </figure>
        <!---->
      </article>
    </div>
    <div class=\\"card-list__card\\">
      <article class=\\"card__item\\">
        <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card__img\\">
          <figcaption class=\\"card__explain\\">
            <h2 class=\\"card__title\\">ダミータイトル</h2>
            <p class=\\"card__text\\">詳細</p>
          </figcaption>
        </figure>
        <!---->
      </article>
    </div>
  </div>
</div>"
`;

exports[`CardListItem CardListItemの初期値(linkあり): dummyCardsLink 1`] = `
"<div>
  <article class=\\"card__item\\">
    <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card__img\\">
      <figcaption class=\\"card__explain\\">
        <h2 class=\\"card__title\\">ダミータイトル</h2>
        <p class=\\"card__text\\">詳細</p>
      </figcaption>
    </figure> <button class=\\"btn\\">
      WebSite
    </button>
  </article>
</div>"
`;

exports[`CardListItem CardListItemの初期値(linkなし): dummyCards 1`] = `
"<div>
  <article class=\\"card__item\\">
    <figure><img alt=\\"ダミータイトルの画像\\" class=\\"card__img\\">
      <figcaption class=\\"card__explain\\">
        <h2 class=\\"card__title\\">ダミータイトル</h2>
        <p class=\\"card__text\\">詳細</p>
      </figcaption>
    </figure>
    <!---->
  </article>
</div>"
`;

exports[`NavBar ナビゲーションバーを閉じる 1`] = `
"<div>
  <div class=\\"navbar\\">
    <div class=\\"navbar__box\\"><a href=\\"/\\" class=\\"nav__logo\\">ダミーテキスト</a>
      <div>
        <div class=\\"border__group\\"><span class=\\"border__top border__top--close\\"></span> <span class=\\"border__middle\\"></span> <span class=\\"border__bottom border__bottom--close\\"></span></div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`NavBar ナビゲーションバーを開く 1`] = `
"<div>
  <div class=\\"navbar\\">
    <div class=\\"navbar__box\\"><a href=\\"/\\" class=\\"nav__logo\\">ダミーテキスト</a>
      <div>
        <div class=\\"border__group\\"><span class=\\"border__top border__top--open\\"></span> <span class=\\"border__middle border__middle--fade\\"></span> <span class=\\"border__bottom border__bottom--open\\"></span></div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`NavList isOpenがfalseの時に\`.nav__list\`が非表示 1`] = `
"<div>
  <transition-stub name=\\"nav-fade\\">
    <div class=\\"nav__list\\" style=\\"display: none;\\">
      <ul>
        <div class=\\"nav__item\\">
          <li class=\\"nav__item\\"><a class=\\"nav__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"Topの画像\\" class=\\"nav__icon\\">
              <div class=\\"nav__text\\">Top</div>
            </a></li>
        </div>
      </ul>
    </div>
  </transition-stub>
</div>"
`;

exports[`NavList isOpenがtrueの時に\`.nav__list\`が表示 1`] = `
"<div>
  <transition-stub name=\\"nav-fade\\">
    <div class=\\"nav__list\\">
      <ul>
        <div class=\\"nav__item\\">
          <li class=\\"nav__item\\"><a class=\\"nav__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"Topの画像\\" class=\\"nav__icon\\">
              <div class=\\"nav__text\\">Top</div>
            </a></li>
        </div>
      </ul>
    </div>
  </transition-stub>
</div>"
`;

exports[`NavListItem 値がDOMに反映されているか 1`] = `
"<div>
  <li class=\\"nav__item\\"><a class=\\"nav__link\\"><img src=\\"http://placehold.jp/150x150.png\\" alt=\\"Topの画像\\" class=\\"nav__icon\\">
      <div class=\\"nav__text\\">Top</div>
    </a></li>
</div>"
`;
